--- a/package.json
+++ b/package.json
@@ -38,99 +38,99 @@
     ]
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.0.0",
-    "@ethersproject/address": "^5.0.0",
-    "@ethersproject/bignumber": "^5.0.0",
-    "@ethersproject/bytes": "^5.0.0",
-    "@ethersproject/constants": "^5.0.0",
-    "@ethersproject/contracts": "^5.0.0",
-    "@ethersproject/experimental": "^5.0.0",
-    "@ethersproject/providers": "^5.0.0",
-    "@ethersproject/strings": "^5.0.0",
-    "@ethersproject/units": "^5.0.0",
-    "@gelatonetwork/limit-orders-lib": "^4.1.0",
-    "@gnosis.pm/safe-apps-wagmi": "^1.0.2",
-    "@next/bundle-analyzer": "^12.0.7",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@ethersproject/abi": "5.6.4",
+    "@ethersproject/address": "5.6.1",
+    "@ethersproject/bignumber": "5.6.2",
+    "@ethersproject/bytes": "5.6.1",
+    "@ethersproject/constants": "5.6.1",
+    "@ethersproject/contracts": "5.6.2",
+    "@ethersproject/experimental": "5.6.3",
+    "@ethersproject/providers": "5.6.8",
+    "@ethersproject/strings": "5.6.1",
+    "@ethersproject/units": "5.6.1",
+    "@gelatonetwork/limit-orders-lib": "4.1.0",
+    "@gnosis.pm/safe-apps-wagmi": "1.0.2",
+    "@next/bundle-analyzer": "12.1.0",
+    "@reduxjs/toolkit": "1.8.2",
     "@sentry/nextjs": "6.19.6",
-    "@uniswap/token-lists": "^1.0.0-beta.19",
-    "ajv": "^6.12.3",
-    "bignumber.js": "^9.0.0",
-    "canvas-confetti": "^1.5.1",
-    "cids": "^1.0.0",
-    "date-fns": "^2.21.3",
-    "easymde": "^2.16.1",
-    "fast-json-stable-stringify": "^2.1.0",
-    "graphql": "^16.3.0",
-    "graphql-request": "^4.2.0",
-    "js-cookie": "^3.0.1",
-    "lightweight-charts": "^3.8.0",
-    "lint-staged": "^12.3.4",
-    "local-storage": "^2.0.0",
-    "localforage": "^1.10.0",
-    "lodash": "^4.17.21",
-    "next": "^12.2.5",
-    "next-themes": "^0.2.0",
-    "numeral": "^2.0.6",
-    "react": "^18.2.0",
-    "react-countup": "^6.3.0",
-    "react-datepicker": "^4.8.0",
-    "react-device-detect": "^2.1.2",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^6.0.2",
-    "react-redux": "^8.0.2",
-    "react-transition-group": "^4.4.1",
-    "react-window": "^1.8.7",
+    "@uniswap/token-lists": "1.0.0-beta.27",
+    "ajv": "6.12.6",
+    "bignumber.js": "9.0.2",
+    "canvas-confetti": "1.5.1",
+    "cids": "1.1.9",
+    "date-fns": "2.28.0",
+    "easymde": "2.16.1",
+    "fast-json-stable-stringify": "2.1.0",
+    "graphql": "16.3.0",
+    "graphql-request": "4.2.0",
+    "js-cookie": "3.0.1",
+    "lightweight-charts": "3.8.0",
+    "lint-staged": "12.3.4",
+    "local-storage": "2.0.0",
+    "localforage": "1.10.0",
+    "lodash": "4.17.21",
+    "next": "12.2.5",
+    "next-themes": "0.2.0",
+    "numeral": "2.0.6",
+    "react": "18.2.0",
+    "react-countup": "6.3.0",
+    "react-datepicker": "4.8.0",
+    "react-device-detect": "2.1.2",
+    "react-dom": "18.2.0",
+    "react-markdown": "6.0.3",
+    "react-redux": "8.0.2",
+    "react-transition-group": "2.9.0",
+    "react-window": "1.8.7",
     "recharts": "2.1.12",
-    "redux-persist": "^6.0.0",
-    "remark-gfm": "^1.0.0",
-    "split-grid": "^1.0.11",
-    "styled-components": "^5.3.3",
-    "swiper": "^8.3.2",
-    "swr": "^1.3.0",
-    "typescript": "^4.6.3",
-    "wagmi": "^0.6.0"
+    "redux-persist": "6.0.0",
+    "remark-gfm": "1.0.0",
+    "split-grid": "1.0.11",
+    "styled-components": "5.3.3",
+    "swiper": "8.3.2",
+    "swr": "1.3.0",
+    "typescript": "4.7.4",
+    "wagmi": "0.6.2"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.0.10",
-    "@stylelint/postcss-css-in-js": "^0.37.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@typechain/ethers-v5": "^8.0.5",
-    "@types/canvas-confetti": "^1.4.2",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^13.13.5",
-    "@types/react": "^18.0.17",
-    "@types/react-datepicker": "^4.4.1",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
-    "@types/react-transition-group": "^4.4.1",
-    "@types/react-window": "^1.8.3",
-    "@types/simplemde": "^1.11.7",
-    "@types/styled-components": "^5.1.26",
-    "eslint": "^7.26.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-lodash": "^7.4.0",
-    "husky": "^7.0.0",
-    "jest": "^27.4.5",
-    "lerna": "^4.0.0",
-    "next-transpile-modules": "^9.0.0",
-    "postcss-scss": "^4.0.3",
-    "postcss-syntax": "^0.36.2",
-    "prettier": "^2.3.0",
-    "serve": "^12.0.0",
-    "source-map-explorer": "^2.5.2",
-    "start-server-and-test": "^1.14.0",
-    "stylelint": "^14.5.3",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^7.0.0",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "ts-node": "^10.9.1",
+    "@next/eslint-plugin-next": "12.2.2",
+    "@stylelint/postcss-css-in-js": "0.37.2",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/react-hooks": "8.0.1",
+    "@typechain/ethers-v5": "8.0.5",
+    "@types/canvas-confetti": "1.4.2",
+    "@types/jest": "26.0.24",
+    "@types/lodash": "4.14.182",
+    "@types/node": "13.13.52",
+    "@types/react": "18.0.17",
+    "@types/react-datepicker": "4.4.1",
+    "@types/react-dom": "18.0.6",
+    "@types/react-redux": "7.1.24",
+    "@types/react-transition-group": "4.4.5",
+    "@types/react-window": "1.8.5",
+    "@types/simplemde": "1.11.8",
+    "@types/styled-components": "5.1.26",
+    "eslint": "7.32.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-lodash": "7.4.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "lerna": "4.0.0",
+    "next-transpile-modules": "9.0.0",
+    "postcss-scss": "4.0.3",
+    "postcss-syntax": "0.36.2",
+    "prettier": "2.3.0",
+    "serve": "12.0.1",
+    "source-map-explorer": "2.5.2",
+    "start-server-and-test": "1.14.0",
+    "stylelint": "14.5.3",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-recommended": "7.0.0",
+    "stylelint-config-standard": "25.0.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "ts-node": "10.9.1",
     "tsconfig": "*",
-    "turbo": "^1.3.1",
-    "typechain": "^6.1.0"
+    "turbo": "1.3.1",
+    "typechain": "6.1.0"
   }
 }
