--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@ethersproject/bignumber": "5.6.2",
     "@ethersproject/bytes": "5.6.1",
     "@ethersproject/constants": "5.6.1",
-    "@ethersproject/contracts": "5.6.2",
     "@ethersproject/experimental": "5.6.3",
     "@ethersproject/providers": "5.6.8",
     "@ethersproject/strings": "5.6.1",
@@ -132,5 +131,22 @@
     "tsconfig": "*",
     "turbo": "1.3.1",
     "typechain": "6.1.0"
+  },
+  "overrides": {
+    "@ethersproject/abstract-signer": "5.6.2",
+    "@ethersproject/base64": "5.6.1",
+    "@ethersproject/basex": "5.6.1",
+    "@ethersproject/contracts": "5.6.2",
+    "@ethersproject/hash": "5.6.1",
+    "@ethersproject/keccak256": "5.6.1",
+    "@ethersproject/logger": "5.6.0",
+    "@ethersproject/networks": "5.6.4",
+    "@ethersproject/properties": "5.6.0",
+    "@ethersproject/random": "5.6.1",
+    "@ethersproject/rlp": "5.6.1",
+    "@ethersproject/sha2": "5.6.1",
+    "@ethersproject/strings": "5.6.1",
+    "@ethersproject/transactions": "5.6.2",
+    "@ethersproject/web": "5.6.1"
   }
 }
